apply feedback. https://gitlab.bbdev.team/vh/subtitles-backend/-/merge_requests/6#note_13137
