# internal/api/models.go
@@ -29,7 +29,7 @@ type Bookmark struct {
 	ID          uint      `gorm:"primarykey"`
 	SlideId     int       `json:"slide_id"`
 	UserId      string    `json:"user_id"`
-	OrderNumber int       `json:"order_number"`
+	OrderNumber int       `json:"order_number,omitempty"`
 	FileUid     string    `json:"file_uid" gorm:"->"`
 	CreatedAt   time.Time `json:"created_at"`
 	UpdatedAt   time.Time `json:"updated_at"`
