# openapi.yaml
@@ -144,14 +144,18 @@ paths:
                           type: string
                           description: user id
                           example: d76322f7-ef67-402c-b151-14193e23a890
-                        order_number:
-                          type: integer
-                          description: bookmarked order number
-                          example: 1
                         file_uid:
                           type: string
                           description: file uid the bookmarked slide belongs to
                           example: vlbukUc2
+                        created_at:
+                          type: string
+                          description: time the bookmarked added
+                          example: "2024-01-05T10:55:25.982590966+09:00"
+                        updated_at:
+                          type: string
+                          description: time the bookmarked updated
+                          example: "2024-01-05T10:55:25.982590966+09:00"
         '401':
           description: Invalid request jwt token
         '400':
